--- a/html/pfappserver/root/configuration/define_policy.tt
+++ b/html/pfappserver/root/configuration/define_policy.tt
@@ -1,2 +1,13 @@
-<h2>[% l('Define Policy') %]</h2>
-<img src="img/instagram-icon.png" alt="Define a Policy">
+<h2><b>[% l('Policies and Access Control') %]</b></h2>
+
+<p> [% l('When an endpoint connects to the network, PacketFence must be able to assign a role to it, or its user. The role can then be translated to a VLAN, a set of ACL, a switch manufacturer policy identifier or a combinations of all of this.') %]</p>
+
+<p>[% l('For PacketFence to work properly, you must define in the following order:') %]</p>
+
+<ul>
+<li>1. <b>[% l('Roles:') %]</b> [% l('a role will allow PacketFence to grant different network access to endpoints connecting to your network. For example, employee vs. guest;') %]</li>
+<li>2. <b>[% l('Domains:') %]</b>  [% l('if you want to authenticate users or machines using a Microsoft Active Domain Controller (DC), you have to join the PacketFence server to the DC;') %]</li>
+<li>3. <b>[% l('Sources:') %]</b> [% l('authentication sources will allow you to identify users and assign them roles and access durations;') %]</li>
+<li>4. <b>[% l('Switches:') %]</b> [% l('lPacketFence manages switches, access points and WiFi controllers. You have to add the equipment you want PacketFence to manage and do the role by VLAN/ACL/policy identifier mapping;') %]</li>
+<li>5. <b>[% l('Connection Profiles:') %]</b> [% l('When devices are connecting to your network, you might want to show a captive portal or auto-register the device. You can control the behavior in this module.') %]</li>
+</ul>
