--- a/html/pfappserver/root/static/scss/_tables.scss
+++ b/html/pfappserver/root/static/scss/_tables.scss
@@ -5,6 +5,18 @@
   max-width: 0;
 }
 
+// Improve apparence of folders in files list
+tr[data-swap] {
+    background-color: #fff;
+
+    & > td {
+      border-left: 4px solid #ddd;
+      padding-left: 10px;
+      padding-right: 0;
+      margin-right: 0;
+    }
+}
+
 .card .table .table {
   // Nesting inside card
   background-color: $cardBackground;
