--- a/html/pfappserver/root/config/source/index.tt
+++ b/html/pfappserver/root/config/source/index.tt
@@ -1,75 +1,64 @@
-    <div class="modal fade hide" id="deleteItem">
-      <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
-        <h3><i>[% l('Delete Source') %]</i> <span></span></h3>
-      </div>
-      <div class="modal-body">
-        <p>[% l('Really delete this users source?') %]</p>
-      </div>
-      <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">[% l('Cancel') %]</a>
-        <a href="#" class="btn btn-primary btn-danger"><i class="icon-trash"></i> [% l('Delete') %]</a>
-      </div>
-    </div><!-- deleteItem -->
+[% MACRO source_create(id, heading, types) BLOCK %]
+      <li class="dropdown-submenu">
+        <a tabindex="-1">[% l(heading) %]</a>
+        <ul class="dropdown-menu" id="[% id %]">
+          [% FOREACH type IN types.sort -%]
+            <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
+          [% END -%]
+        </ul>
+      </li>
+[% END %]
+
+<div class="modal fade hide" id="deleteSource">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">&times;</a>
+    <h3><i>[% l('Delete Source') %]</i> <span></span></h3>
+  </div>
+  <div class="modal-body">
+    <p>[% l('Really delete this users source?') %]</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">[% l('Cancel') %]</a>
+    <a href="#" class="btn btn-primary btn-danger"><i class="icon-trash"></i> [% l('Delete') %]</a>
+  </div>
+</div><!-- deleteItem -->
+
 <div class="card">
   <div class="card-title">
     <h2>[% l('Authentication Sources') %] [% doc('_authentication') | none %]</h2>
-<p>[% l('Define the authentication sources to let users access the captive portal or the admin Web interface.') %]</p>
-<p>[% l('Each connection profile must be associated with one or multiple authentication sources while 802.1X connections use the ordered internal sources to determine which role to use. External sources are never used with 802.1X connections.') %]</p>
+    <p>[% l('Define the authentication sources to let users access the captive portal or the admin Web interface.') %]</p>
+    <p>[% l('Each connection profile must be associated with one or multiple authentication sources while 802.1X connections use the ordered internal sources to determine which role to use. External sources are never used with 802.1X connections.') %]</p>
   </div>
   <div class="card-block">
-[% IF error %]<div class="alert alert-error">
-  <button class="close" data-dismiss="alert">&times;</button>
-  <strong>[% l('Error!') %]</strong> <span>[% error %]</span>
-</div>[% END %]
 
-[% IF message %]<div class="alert alert-success">
-  <button class="close" data-dismiss="alert">&times;</button>
-  <strong>[% l('Success!') %]</strong> [% message %]
-</div>[% END -%]
+    [% IF error %]
+    <div class="alert alert-error">
+    <button class="close" data-dismiss="alert">&times;</button>
+    <strong>[% l('Error!') %]</strong> <span>[% error %]</span>
+    </div>
+    [% END %]
 
-      [% INCLUDE config/source/list.tt %]
+    [% IF message %]
+    <div class="alert alert-success">
+     <button class="close" data-dismiss="alert">&times;</button>
+     <strong>[% l('Success!') %]</strong> [% message %]
+    </div>
+    [% END -%]
 
-</div>
-[%- IF can_access("USERS_SOURCES_CREATE") %]
-<div class="form-actions">
-  <div class="btn-group">
-    <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add source') %] <span class="caret"></span></a>
-    <ul id="createSource" class="dropdown-menu">
-      <li class="dropdown-submenu">
-        <a tabindex="-1">[% l('Internal') %]</a>
-        <ul class="dropdown-menu" id="internal_types">
-          [% FOREACH type IN internal_types.sort -%]
-            <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
-          [% END -%]
-        </ul>
-      </li>
-      <li class="dropdown-submenu">
-        <a tabindex="-1">[% l('External') %]</a>
-        <ul class="dropdown-menu" id="external_types">
-          [% FOREACH type IN external_types.sort -%]
-            <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
-          [% END -%]
-        </ul>
-      </li>
-      <li class="dropdown-submenu">
-        <a tabindex="-1">[% l('Exclusive') %]</a>
-        <ul class="dropdown-menu" id="exclusive_types">
-          [% FOREACH type IN exclusive_types.sort -%]
-            <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
-          [% END -%]
-        </ul>
-      </li>
-      <li class="dropdown-submenu">
-        <a tabindex="-1">[% l('Billing') %]</a>
-        <ul class="dropdown-menu" id="billing_types">
-          [% FOREACH type IN billing_types.sort -%]
-            <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
-          [% END -%]
-        </ul>
-      </li>
-    </ul>
+    [% INCLUDE config/source/list.tt %]
+
   </div>
-</div>
-[%- END %]
+  [%- IF can_access("USERS_SOURCES_CREATE") %]
+  <div class="form-actions">
+    <div class="btn-group">
+      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add source') %] <span class="caret"></span></a>
+      <ul id="createSource" class="dropdown-menu">
+        [% source_create('internal_types', 'Internal', internal_types) | none %]
+        [% source_create('external_types', 'External', external_types) | none %]
+        [% source_create('exclusive_types', 'Exclusive', exclusive_types) | none %]
+        [% source_create('billing_types', 'Billing', billing_types) | none %]
+      </ul>
+    </div>
+  </div>
+  [%- END %]
 </div>
