--- a/html/pfappserver/root/config/source/view.tt
+++ b/html/pfappserver/root/config/source/view.tt
@@ -3,17 +3,35 @@
 [%ELSE%]
 [% SET action_url = c.req.uri %]
 [% END %]
+
+[% IF item.id %]
+[% heading = item.id %]
+[% CALL form.field('id').set_element_attr('readonly','readonly') %]
+[% ELSE %]
+[% heading = l('New Source')  %]
+[% END %]
 <ul class="breadcrumb">
-  <li><a href="[% c.pf_hash_for(c.controller.action_for('index')) %]">[% l('User Sources') %]</a> <span class="divider"><i class="icon-chevron-right"></i></span></li>
+  <li><a href="[% c.pf_hash_for(c.controller.action_for('index')) %]">[% l('Authentication Sources') %]</a> <span class="divider"><i class="icon-chevron-right"></i></span></li>
   <li class="active">[% item.id | html %]</li>
 </ul>
 
-<h3>[% item.id | html %] <small>[% item.type | html %]</small></h3>
+<div class="card">
+<div class="card-title">
+<h3><i class="icon-2x icon-[% item.type | html | lower %]"></i>&nbsp[% heading %]<small>[% item.type | html %]</small></i></h3>
+</div>
 
+    [% IF message %]
+    <div class="alert alert-success">
+      <button class="close" data-dismiss="alert">&times;</button>
+      <strong>[% l('Success!') %]</strong> [% message %]
+    </div>
+    [% END -%]
+
+  <div class="card-block">
 <form name="modalSource" class="form-horizontal" action="[% action_url %]" method="post">
   [%- IF item.id %]<input type="hidden" name="id" value="[% item.id | html %]">[% END %]
 
-        [% form.field('id').render UNLESS item && item.id.defined %]
+        [% form.field('id').render | none %]
         [% form.block('standard').render | none %]
         [% INCLUDE "config/source/type/${item.type}.tt" %]
         [% form.block('rules').render | none %]
@@ -23,3 +41,5 @@
         [% IF can_access("USERS_SOURCES_UPDATE") %]<button class="btn btn-primary" data-loading-text="[% l('Saving') %]">[% l('Save') %]</button>[% END %]
     </div>
 </form>
+  </div>
+</div>
